Flickschuster warnings and out of heap issues for asciidoctorPdf
- asciidoctorPdf regularly ran out of heapspace after each 3rd build
- also we wanted to get rid of
   WARN FilenoUtil : Native subprocess control requires open access to the JDK IO subsystem
- and yes, it's not nice but it solves the problem for now